<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:focusable="true"
    android:background="@color/colorPrimary2"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="60dp"
        android:layout_marginLeft="30dp"
        android:text="@string/lib_book"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="40sp"
        android:textStyle="bold"
        android:fontFamily="cursive"
        />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="200dp"
            >
    <Button
        android:id="@+id/fav"
        android:nextFocusDown="@+id/sign_up"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/fav"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp"/>

            <Button
                android:id="@+id/wread"
                android:nextFocusDown="@+id/sign_up"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="30dp"
                android:background="@color/colorPrimaryDark"
                android:text="@string/wread"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="18sp"/>
        </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="260dp"
        >
        <Button
            android:id="@+id/don"
            android:nextFocusDown="@+id/sign_up"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="@color/colorPrimaryDark"
            android:text="@string/don"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18sp"/>

        <Button
            android:id="@+id/allbooks"
            android:nextFocusDown="@+id/sign_up"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="30dp"
            android:background="@color/colorPrimaryDark"
            android:text="@string/allBooks"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18sp"/>
    </LinearLayout>
    <include
        layout="@layout/my_app_bar_layout"/>
    <androidx.recyclerview.widget.RecyclerView

        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="350dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="20dp"
        android:textColor="@color/colorPrimaryDark"
        />

</RelativeLayout>